sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:4: error: not found: value getNumberValeurs
  while (pos != getNumberValeurs()-1){
                ^